[tool.poetry]
name = "balatro-hand-stats"
version = "0.1.0"
description = ""
authors = ["NicolleLouis <louisxnicolle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
